--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	<section id="two" class="wrapper alt spotlight style2">
 		<div class="inner">
 
-			<a href="#" class="image"><img src="images/nawarian.jpg" alt="" /></a>
+			<a href="#" class="image"><img src="images/dan.jpg" alt="" /></a>
 			<div class="content">
 			<h2 class="major">Sobre</h2>
 			<p>Desenvolvedor há aproximadamente 4 anos, tecnólogo em Análise e Desenvolvimento de Sistemas e já estive envolvido com desenvolvimento de sistemas de seguradoras, financeiras e advocacias. Hoje dedico meus dias ao estudo de tecnologias, práticas e técnicas sobre sistemas distribuídos, procurando integrar todas as áreas de atuação através destes. Além disso estou sempre dispostos a expandir os meus conhecimentos através de livros, palestras e workshops.</p>
