--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<h2>Menu</h2>
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Carreira</a></li>
+					<li><a href="/pages/experiencia.html">Experiência</a></li>
 					<li><a href="elements.html">Cursos</a></li>
 					<li><a href="#">Contato</a></li>
 				</ul>
