--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -33,9 +33,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <h2>Menu</h2>
         <ul class="links">
           <li><a href="../index.html">Home</a></li>
-          <li><a href="/pages/carreira.html">Carreira</a></li>
-          <li><a href="elements.html">Cursos</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="../pages/experiencia.html">Experiência</a></li>
+          <li><a href="../pages/formacao-academica.html">Formação acadêmica</a></li>
+          <li><a href="../pages/contato.html">Contato</a></li>
         </ul>
         <a href="#" class="close">Close</a>
       </div>
