--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="/pages/experiencia.html">Experiência</a></li>
-					<li><a href="elements.html">Cursos</a></li>
-					<li><a href="#">Contato</a></li>
+					<li><a href="/pages/formacao-academica.html">Formação acadêmica</a></li>
+					<li><a href="/pages/contato.html">Contato</a></li>
 				</ul>
 				<a href="#" class="close">Close</a>
 			</div>
