Pagina de Contato

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -6,7 +6,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 -->
 <html>
 <head>
-  <title>Formação acadêmica  - Danilo Righetto</title>
+  <title>Contato  - Danilo Righetto</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 
     <!-- Header -->
     <header id="header">
-      <h1><a href="index.html">Formação acadêmica - Danilo Righetto</a></h1>
+      <h1><a href="index.html">Contato - Danilo Righetto</a></h1>
       <nav>
         <a href="#menu">Menu</a>
       </nav>
@@ -45,7 +45,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
     <section id="wrapper">
       <header>
         <div class="inner">
-          <h2>Formação acadêmica - Danilo Righetto</h2>
+          <h2>Contato - Danilo Righetto</h2>
           <p>Analista de Sistemas, Desenvolvedor PHP e curioso por novas tecnologias.</a></p>
         </div>
       </header>
@@ -54,35 +54,18 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
       <div class="wrapper">
         <div class="inner">
 
-          <section>
-            <h2 class="major">Análise e Desenvolvimento de Sistemas</h2>
-            <p><i>FACULDADE IMPACTA DE TÉCNOLOGIA</i></p>
-            <p>O curso forma profissionais conhecidos como Analista de Sistemas ou Desenvolvedor de Sistemas.  São esses profissionais que criam os sistemas com os quais você já teve contato: sistemas de comércio eletrônico, sistemas de redes sociais, web sites, apenas para citar alguns.</p>
 
-            <div class="row">
-              <div class="6u 12u$(medium)">
-                <h4>Grade do Curso</h4>
-                <ul class="alt">
-                  <li>Fundamentos de Banco de Dados</li>
-                  <li>Linguagem de Programação I</li>
-                  <li>Linguagem de Programação II</li>
-                  <li>Lógica de Programação</li>
-                  <li>Matemática Aplicada</li>
-                  <li>Engenharia de Software</li>
-                  <li>Gestão de Projetos</li>
-                  <li>Linguagem SQL</li>
-                  <li>Análise e Modelagem de Sistemas</li>
-                  <li>Desenvolvimento de Aplicações Distribuídas</li>
-                  <li>Estrutura de Dados</li>
-                  <li>Arquitetura e Projeto de Sistemas</li>
-                  <li>Desenvolvimento para Dispositivos Móveis</li>
-                  <li>Qualidade de Software</li>
-                </ul>
-              </div>
-            </div>
-            <p><em><strong>De janeiro de 2013 até dezembro de 2015.</strong></em></p>
-          </section>
-
+          <h2>Acesse:</h2>
+          <ul class="icons">
+            <li><a href="https://br.linkedin.com/in/danilo-righetto" class="contato icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+            <li><a href="https://twitter.com/danilorighetto" class="contato icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="contato icon fa-whatsapp"><span class="label">Whatsapp</span></a></li>
+            <li><a href="https://facebook.com/danilo.righeto" class="contato icon fa-facebook"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="contato icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="https://github.com/danilo-righetto" class="contato icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="#" class="contato icon fa-trello"><span class="label">Trello</span></a></li>
+            <li><a href="#" class="contato icon fa-wordpress"><span class="label">Wordpress</span></a></li>
+          </ul>
 
 
         </div>
