--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<a href="#" class="image"><img src="images/dan.jpg" alt="" /></a>
 			<div class="content">
 			<h2 class="major">Sobre</h2>
-			<p>Desenvolvedor há aproximadamente 4 anos, tecnólogo em Análise e Desenvolvimento de Sistemas e já estive envolvido com desenvolvimento de sistemas de seguradoras, financeiras e advocacias. Hoje dedico meus dias ao estudo de tecnologias, práticas e técnicas sobre sistemas distribuídos, procurando integrar todas as áreas de atuação através destes. Além disso estou sempre dispostos a expandir os meus conhecimentos através de livros, palestras e workshops.</p>
+			<p>Desenvolvedor há aproximadamente 4 anos, tecnólogo em Análise e Desenvolvimento de Sistemas e já esteve envolvido com desenvolvimento de sistemas de seguradoras, financeiras e advocacias. Hoje ele dedica seus dias ao estudo de tecnologias, práticas e técnicas sobre sistemas distribuídos, procurando integrar todas as áreas de atuação através destes. Além disso, o mesmo está sempre disposto a expandir os seus conhecimentos através de livros, palestras e workshops.</p>
 			<a href="#" class="special">Leia mais</a>
 		</div>
 
@@ -195,7 +195,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 		1234 Somewhere Road Suite #2894<br />
 		Nashville, TN 00000-0000
 	</li> -->
-	<li class="fa-linkedin"><a href="https://facebook.com/danilo.righeto">facebook.com/danilo.righeto</a></li>
+	<li class="fa-linkedin"><a href="https://br.linkedin.com/in/danilo-righetto">in/danilo-righetto</a></li>
 	<li class="fa-github"><a href="https://github.com/danilo-righetto">github.com/danilo-righetto</a></li>
 </ul>
 <ul class="copyright">
