--- a/pages/formacao-academica.html
+++ b/pages/formacao-academica.html
@@ -130,7 +130,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
   1234 Somewhere Road Suite #2894<br />
   Nashville, TN 00000-0000
 </li> -->
-<li class="fa-linkedin"><a href="https://facebook.com/danilo.righeto">facebook.com/danilo.righeto</a></li>
+<li class="fa-linkedin"><a href="https://br.linkedin.com/in/danilo-righetto">in/danilo-righetto</a></li>
 <li class="fa-github"><a href="https://github.com/danilo-righetto">github.com/danilo-righetto</a></li>
 </ul>
 <ul class="copyright">
