--- a/pages/contato.html
+++ b/pages/contato.html
@@ -1,33 +1,19 @@
 <!DOCTYPE HTML>
-<!--
-Solid State by HTML5 UP
-html5up.net | @ajlkn
-Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
   <title>Contato  - Danilo Righetto</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="stylesheet" href="../assets/css/main.css" />
-  <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-  <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 </head>
 <body>
-
-  <!-- Page Wrapper -->
   <div id="page-wrapper">
-
-    <!-- Header -->
     <header id="header">
       <h1><a href="index.html">Contato - Danilo Righetto</a></h1>
       <nav>
         <a href="#menu">Menu</a>
       </nav>
     </header>
-
-    <!-- Menu -->
     <nav id="menu">
       <div class="inner">
         <h2>Menu</h2>
@@ -40,8 +26,6 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
         <a href="#" class="close">Close</a>
       </div>
     </nav>
-
-    <!-- Wrapper -->
     <section id="wrapper">
       <header>
         <div class="inner">
@@ -49,87 +33,44 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
           <p>Analista de Sistemas, Desenvolvedor PHP e curioso por novas tecnologias.</a></p>
         </div>
       </header>
-
-      <!-- Content -->
       <div class="wrapper">
         <div class="inner">
-
-
           <h2>Acesse:</h2>
           <ul class="icons">
             <li><a href="https://br.linkedin.com/in/danilo-righetto" class="contato icon fa-linkedin"><span class="label">Linkedin</span></a></li>
             <li><a href="https://twitter.com/danilorighetto" class="contato icon fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="contato icon fa-whatsapp"><span class="label">Whatsapp</span></a></li>
             <li><a href="https://facebook.com/danilo.righeto" class="contato icon fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="contato icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="https://www.instagram.com/danilo.righetto/" class="contato icon fa-instagram"><span class="label">Instagram</span></a></li>
             <li><a href="https://github.com/danilo-righetto" class="contato icon fa-github"><span class="label">Github</span></a></li>
-            <li><a href="#" class="contato icon fa-trello"><span class="label">Trello</span></a></li>
-            <li><a href="#" class="contato icon fa-wordpress"><span class="label">Wordpress</span></a></li>
+            <li><a href="https://500px.com/danilorighetto" class="contato icon fa-500px"><span class="label">500px</span></a></li>
+            <li><a href="http://www.behance.net/danilorighetto" class="contato icon fa-behance"><span class="label">Behance</span></a></li>
+            <li><a href="https://danilorighetto.wordpress.com/" class="contato icon fa-wordpress"><span class="label">Wordpress</span></a></li>
           </ul>
-
-
         </div>
       </div>
-
     </section>
 
-    <!-- Footer -->
     <section id="footer">
       <div class="inner">
         <h2 class="major">Entre em contato</h2>
         <p>Você pode me encontrar através das informações abaixo:</p>
-        <!--
-        <form method="post" action="#">
-        <div class="field">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" />
+          <ul class="contact">
+          <li class="fa-envelope"><a href="mailto:danilorighetto@hotmail.com">danilorighetto@hotmail.com</a></li>
+          </ul>
+          <ul class="contact">
+          <li class="fa-linkedin"><a href="https://br.linkedin.com/in/danilo-righetto">in/danilo-righetto</a></li>
+          </ul>
+          <ul class="copyright">
+            <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          </ul>
       </div>
-      <div class="field">
-      <label for="email">Email</label>
-      <input type="email" name="email" id="email" />
-    </div>
-    <div class="field">
-    <label for="message">Message</label>
-    <textarea name="message" id="message" rows="4"></textarea>
-  </div>
-  <ul class="actions">
-  <li><input type="submit" value="Send Message" /></li>
-</ul>
-</form> -->
-<ul class="contact">
-  <!--
-  <li class="fa-home">
-  Untitled Inc<br />
-  1234 Somewhere Road Suite #2894<br />
-  Nashville, TN 00000-0000
-</li> -->
-<li class="fa-phone">(11) 98347-9532</li>
-<li class="fa-envelope"><a href="mailto:danilorighetto@hotmail.com">danilorighetto@hotmail.com</a></li>
-
-</ul>
-<ul class="contact">
-  <!-- <li class="fa-home">
-  Untitled Inc<br />
-  1234 Somewhere Road Suite #2894<br />
-  Nashville, TN 00000-0000
-</li> -->
-<li class="fa-linkedin"><a href="https://br.linkedin.com/in/danilo-righetto">in/danilo-righetto</a></li>
-<li class="fa-github"><a href="https://github.com/danilo-righetto">github.com/danilo-righetto</a></li>
-</ul>
-<ul class="copyright">
-  <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-</ul>
-</div>
-</section>
-
+    </section>
 </div>
 
-<!-- Scripts -->
 <script src="../assets/js/skel.min.js"></script>
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/jquery.scrollex.min.js"></script>
 <script src="../assets/js/util.js"></script>
-<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="../assets/js/main.js"></script>
 
 </body>
