--- a/pages/contato.html
+++ b/pages/contato.html
@@ -42,9 +42,10 @@
             <li><a href="https://facebook.com/danilo.righeto" class="contato icon fa-facebook"><span class="label">Facebook</span></a></li>
             <li><a href="https://www.instagram.com/danilo.righetto/" class="contato icon fa-instagram"><span class="label">Instagram</span></a></li>
             <li><a href="https://github.com/danilo-righetto" class="contato icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="https://danilorighetto.wordpress.com/" class="contato icon fa-wordpress"><span class="label">Wordpress</span></a></li>
             <li><a href="https://500px.com/danilorighetto" class="contato icon fa-500px"><span class="label">500px</span></a></li>
             <li><a href="http://www.behance.net/danilorighetto" class="contato icon fa-behance"><span class="label">Behance</span></a></li>
-            <li><a href="https://danilorighetto.wordpress.com/" class="contato icon fa-wordpress"><span class="label">Wordpress</span></a></li>
+            <li><a href="https://gurushots.com/danilonewtrue/photos" class="contato icon fa-camera-retro"><span class="label">GuruShots</span></a></li>
           </ul>
         </div>
       </div>
